--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			</div>
 		</nav>
 
-		<section id="home" class="video-hero" style="height: 700px; background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
+		<section id="home" class="video-hero" style="height:700px; background-image: url(images/cover_img_1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
 		<div class="overlay"></div>
 			<div class="display-t text-center">
 				<div class="display-tc">
