--- a/register.html
+++ b/register.html
@@ -65,7 +65,7 @@
 			</div>
 		</nav>
 
-		<section id="home" class="video-hero" style="display: none; height: 500px; background-image: url(images/cover_img_1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
+		<section id="home" class="video-hero" style="height: 500px; background-image: url(images/cover_img_1.jpg);  background-size:cover; background-position: center center;background-attachment:fixed;" data-section="home">
 		<div class="overlay"></div>
 			<div class="display-t display-t2 text-center">
 				<div class="display-tc">
@@ -80,7 +80,7 @@
 			</div>
 		</section>
 
-		<div id="colorlib-contact" style='margin-top: 50px'>
+		<div id="colorlib-contact" style="padding-top: 20px">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-pull-4 animate-box">
