health chart updated

--- a/register.html
+++ b/register.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="res/alertify/alertify.default.css" id="toggleCSS" />
     <link rel="stylesheet" href="res/micromodal/micromodal.min.css" />
     <link rel="stylesheet" href="res/btn.css" />
+    <link rel="stylesheet" href="/res/inputs.css" />
     <link rel='stylesheet' href='main.css' />
     <script src="https://kit.fontawesome.com/291664cdf8.js" crossorigin="anonymous"></script>
 
@@ -124,6 +125,58 @@
 								<div class="col-md-6">
 									<!-- <label for="fname">First Name</label> -->
 									<input type="text" id="code" class="form-control" placeholder="그룹 코드">
+								</div>
+              </div>
+							<div class="row form-group">
+								<div class="col-md-6">
+									<!-- <label for="fname">First Name</label> -->
+									<input type="number" id="age" class="form-control" placeholder="연령(만)">
+								</div>
+              </div>
+							<div class="row form-group" style='margin-bottom: 0px!important'>
+								<div class="col-md-6">
+                  <table style='width: 60%; text-align: center'>
+                    <tr>
+                      <td>
+                        <label class="control control--radio">남성
+                          <input type="radio" name="sex" value='M'/>
+                          <div class="control__indicator"></div>
+                        </label>
+                      </td>
+                      <td>
+                        <label class="control control--radio">여성
+                          <input type="radio" name="sex" value='F'/>
+                          <div class="control__indicator"></div>
+                        </label>
+                      </td>
+                    </tr>
+                  </table>
+								</div>
+              </div>
+              <div class="row form-group" style='margin-bottom: 0px!important'>
+								<div class="col-md-6">
+                  <table style='width: 90%; text-align: center'>
+                    <tr>
+                      <td>
+                        <label class="control control--radio">육군
+                          <input type="radio" name="group" value='육군'/>
+                          <div class="control__indicator"></div>
+                        </label>
+                      </td>
+                      <td>
+                        <label class="control control--radio">해군
+                          <input type="radio" name="group" value='해군'/>
+                          <div class="control__indicator"></div>
+                        </label>
+                      </td>
+                      <td>
+                        <label class="control control--radio">공군
+                          <input type="radio" name="group" value='공군'/>
+                          <div class="control__indicator"></div>
+                        </label>
+                      </td>
+                    </tr>
+                  </table>
 								</div>
               </div>
 							<div class="form-group">
