health page completed

--- a/mypage/health.html
+++ b/mypage/health.html
@@ -110,7 +110,7 @@
           </div>
           <div class="col-md-4 animate-box" style='margin-top: 7rem'>
             <article>
-              <h2>일일 운동</h2><br>
+              <h2>일일 운동량</h2><br>
               <div style='text-align: center'>
                 <input id="date" class='' style='margin: 100 0;' type="date" value="" />
               </div><br>
