--- a/mypage/medical.html
+++ b/mypage/medical.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="../res/btn.css" />
     <link rel='stylesheet' href='../main.css' />
     <script src="https://kit.fontawesome.com/291664cdf8.js" crossorigin="anonymous"></script>
+    <link rel='stylesheet' href='../res/chart.js/Chart.min.css' />
 	</head>
 	<body>
 	<div class="colorlib-loader"></div>
@@ -99,7 +100,21 @@
               </ol>
               <div style='display: none; position: absolute; z-index: 10; top: 50%; left: 50%; margin-top: -8rem; margin-left: -11rem; width: 22rem; height: 15rem; border-radius: 50%; border: 3px solid black;'></div>
             </div>
-            
+          </div>
+          <div class="col-md-4 animate-box" style='margin-top: 7rem'>
+            <article>
+            <h2>전염병</h2>
+              범례에서 항목을 클릭하면 표에서 제외됩니다.
+              <canvas id='medicalChart' style='width: 100%; height: 500px'></canvas><br>
+              &nbsp;&nbsp;여름철에는 유행성 이하선염(볼거리)과 말라리아가 주로 유행합니다. 장병들은 개인 위생에 유의하고 모기에 물리지 않도록 주의하시기 바랍니다.<br>
+              &nbsp;&nbsp;가을 ~ 겨울철에는 쯔쯔가무시증이 유행합니다. 이 시기에는 관목이나 풀숲에 들어가는 것을 자제하시기 바랍니다.
+            </article>
+          </div>
+          <div class="col-md-4 animate-box" style='margin-top: 7rem'>
+            <article>
+            <h2>코로나-19</h2>
+              <canvas id='covidChart' style='width: 100%; height: 500px'></canvas><br>
+            </article>
           </div>
 				</div>
 			</div>
@@ -167,7 +182,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
   <script src='../res/alertify/alertify.min.js'></script>
   <script src='../res/micromodal/micromodal.min.js'></script>
+  <script src='../res/chart.js/Chart.bundle.min.js'></script>
   <script src='../main.js'></script>
   <script src='mypage.js'></script>
+  <script src='medical.js'></script>
   </body>
 </html>
