member page update

--- a/mypage/communication.html
+++ b/mypage/communication.html
@@ -50,7 +50,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2">
-							<div id="colorlib-logo"><a href="index.html">밀알 Mil-All</a></div>
+							<div id="colorlib-logo"><a href="../">밀알 Mil-All</a></div>
 						</div>
 						<div class="col-md-10 text-right menu-1">
 							<ul>
