--- a/mypage/health.html
+++ b/mypage/health.html
@@ -52,7 +52,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2">
-							<div id="colorlib-logo"><a href="index.html">밀알 Mil-All</a></div>
+							<div id="colorlib-logo"><a href="../">밀알 Mil-All</a></div>
 						</div>
 						<div class="col-md-10 text-right menu-1">
 							<ul>
@@ -142,6 +142,10 @@
                 <tr>
                   <td>스쿼트</td>
                   <td><input type="number" id="squat" class="healthAmount form-control" placeholder="회" min=0></td>
+                </tr>
+                <tr>
+                  <td>추가섭취 칼로리</td>
+                  <td><input type="number" id="calorie" class="healthAmount form-control" placeholder="kcal"></td>
                 </tr>
               </table>
               <div>&nbsp;
