--- a/console/index.html
+++ b/console/index.html
@@ -13,8 +13,10 @@
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
     <link href="vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
-    <link rel='stylesheet' href='/ajoumeow/Resources/Libraries/alertify/alertify.core.css' />
-    <link rel='stylesheet' href='/ajoumeow/Resources/Libraries/alertify/alertify.default.css' />
+    <link rel='stylesheet' href='/res/alertify/alertify.core.css' />
+    <link rel='stylesheet' href='/res/alertify/alertify.default.css' />
+    <link rel="stylesheet" href="/res/micromodal/micromodal.min.css" />
+    <link rel='stylesheet' href='../res/chart.js/Chart.min.css' />
     <link rel='stylesheet' href='css/console.css'>
   </head>
   <body id="page-top">
@@ -116,12 +118,67 @@
             <div class="d-sm-flex align-items-center justify-content-between mb-4">
               <h1 class="h3 mb-0 text-gray-800">설정</h1>
             </div>
-            <table style='width: 100%; border-spacing: 7 10; margin-left: -5; margin-top: -10; font-size: 0.8rem'>
+            <table id='settingArea' style='width: 100%; border-spacing: 7 10; margin-left: -5; margin-top: -10; font-size: 0.8rem'>
+              <colgroup>
+                <col width='30%'>
+                <col width='50%'>
+              </colgroup>
               <tr>
                 <td>공지사항</td>
               </tr>
               <tr>
                 <td colspan='3'><textarea class='setting notice' id='notice' style='width: 100%; height: 70px'></textarea></td>
+              </tr>
+              <tr><td>&nbsp;</td></tr>
+              <tr>
+                <td style='font-weight: bold' colspan=2>
+                  그룹 체력단련 목표
+                </td>
+              </tr>
+              <tr>
+                <td>3km 달리기</td>
+                <td><input type='number' id='3km_min'style='width: 30%' placeholder='분'> : <input type='number' id='3km_sec'style='width: 30%' placeholder='초'></td>
+              </tr>
+              <tr>
+                <td>윗몸일으키기</td>
+                <td><input type='number' id='pullup' placeholder='회'></td>
+              </tr>
+              <tr>
+                <td>팔굽혀펴기</td>
+                <td><input type='number' id='pushup' placeholder='회'></td>
+              </tr>
+              <tr>
+                <td>벤치프레스</td>
+                <td><input type='number' id='bench' placeholder='kg'></td>
+              </tr>
+              <tr>
+                <td>데드리프트</td>
+                <td><input type='number' id='lift' placeholder='kg'></td>
+              </tr>
+              <tr>
+                <td>스쿼트</td>
+                <td><input type='number' id='squat' placeholder='kg'></td>
+              </tr>
+              <tr><td>&nbsp;</td></tr>
+              <tr>
+                <td style='font-weight: bold'>급양대 설정</td>
+                <td><select id='diet'></select></td>
+              </tr>
+              <tr>
+                <td width='100%'>오늘 식단표 미리보기</td>
+                <td id='dietdate'><script>document.write(new Date().getFullYear() + '-' + (new Date().getMonth() + 1) + '-' + new Date().getDate())</script></td>
+              </tr>
+              <tr>
+                <td>아침</td>
+                <td id='morning'></td>
+              </tr>
+              <tr>
+                <td>점심</td>
+                <td id='lunch'></td>
+              </tr>
+              <tr>
+                <td>저녁</td>
+                <td id='dinner'></td>
               </tr>
             </table>
           </div>
@@ -162,6 +219,21 @@
             <div class="d-sm-flex align-items-center justify-content-between mb-4">
               <h1 class="h3 mb-0 text-gray-800">건강 관리</h1>
             </div>
+            <div class="col-xl-8 col-lg-7">
+              <div class="card shadow mb-4">
+                <!-- Card Header - Dropdown -->
+                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                  <h6 class="m-0 font-weight-bold text-primary">전염병</h6>
+                </div>
+                <!-- Card Body -->
+                <div class="card-body">
+                  범례에서 항목을 클릭하면 표에서 제외됩니다.
+                  <div style='width: 100%; height:500px'><canvas id='medicalChart'></canvas></div><br>
+                  &nbsp;&nbsp;여름철에는 유행성 이하선염(볼거리)과 말라리아가 주로 유행합니다. 장병들은 개인 위생에 유의하고 모기에 물리지 않도록 주의하시기 바랍니다.<br>
+                  &nbsp;&nbsp;가을 ~ 겨울철에는 쯔쯔가무시증이 유행합니다. 이 시기에는 관목이나 풀숲에 들어가는 것을 자제하시기 바랍니다.
+                </div>
+              </div>
+            </div>
           </div>
           <div class="container-fluid text-gray-700" id='boardContent' style='display: none;'>
             <!-- Page Heading -->
@@ -194,33 +266,6 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-8 col-lg-7">
-              <div class="card shadow mb-4">
-                <!-- Card Header - Dropdown -->
-                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                  <h6 class="m-0 font-weight-bold text-primary">활동 통계</h6>
-                </div>
-                <!-- Card Body -->
-                <div class="card-body">
-                  <label><input type='radio' name='statisticsType' value='thisMonthFeeding' checked> 이번 달 급식 마일리지 순위</input></label>
-                  <label><input type='radio' name='statisticsType' value='thisMonthTotal'> 이번 달 마일리지 전체 순위</input></label>
-                  <label><input type='radio' name='statisticsType' value='lastMonthFeeding'> 저번 달 급식 마일리지 순위</input></label>
-                  <label><input type='radio' name='statisticsType' value='totalStatistics'> 전체 기간 마일리지 순위</input></label>
-                  <div class='table-responsive'>
-                    <table class="table table-bordered" id="statistics" width="99%" style='table-layout: fixed; text-align: center' cellspacing="0">
-                      <colgroup>
-                        <col />
-                        <col />
-                      </colgroup>
-                      <thead>
-                        <th>이름</th>
-                        <th>마일리지</th>
-                      </thead>
-                    </table>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
         <!-- End of Main Content -->
@@ -238,29 +283,48 @@
       </div>
       <!-- End of Content Wrapper -->
     </div>
-    <!-- End of Page Wrapper -->
-    <!-- Scroll to Top Button
-      <a class="scroll-to-top rounded" href="#page-top">
-        <i class="fas fa-angle-up"></i>
-      </a>-->
-    <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">로그아웃</h5>
-            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">로그아웃합니다.</div>
-          <div class="modal-footer">
-            <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-            <a class="btn btn-primary" href="login.html">Logout</a>
+    <!-- Modal-->
+      <div class="modal micromodal-slide" id="memberDetail" aria-hidden="true">
+        <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+          <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="memberDetail-title" style="width: 90%">
+            <header class="modal__header">
+              <h2 class="modal__title" id="memberDetail-title" style="font-size: 1.8rem"></h2>
+              <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+            </header>
+            <main class="modal__content" id="memberDetail-content" style="text-align:center;">
+              <table width='70%'>
+                <colgroup>
+                  <col width='50%'>
+                  <col width='50%'>
+                </colgroup>
+                <tr>
+                  <td>군번</td>
+                  <td id='memberDetail-id'></td>
+                </tr>
+                <tr>
+                  <td>군구분</td>
+                  <td id='memberDetail-group'></td>
+                </tr>
+                <tr>
+                  <td>나이</td>
+                  <td id='memberDetail-age'></td>
+                </tr>
+                <tr>
+                  <td>직책</td>
+                  <td><select id='memberDetail-role'><option value='admin'>관리자</option><option value='member'>회원</option></select></td>
+                </tr>
+                <tr>
+                  <td>성별</td>
+                  <td id='memberDetail-sex'></td>
+                </tr>
+              </table><br>
+              <div class="chart-container" style="position: relative; width:100%; height: 80vw;">
+                <canvas id='healthChart'></canvas>
+              </div>
+            </main>
           </div>
         </div>
       </div>
-    </div>
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -270,8 +334,10 @@
     <script src="js/sb-admin-2.js"></script>
     <script src="vendor/datatables/jquery.dataTables.min.js"></script>
     <script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+    <script src='/res/micromodal/micromodal.min.js'></script>
     <script src='js/datatable-editor.js'></script>
-    <script src='/ajoumeow/Resources/Libraries/alertify/alertify.min.js'></script>
+    <script src='/res/alertify/alertify.min.js'></script>
+    <script src='/res/chart.js/Chart.bundle.min.js'></script>
     <script src='js/console.js'></script>
   </body>
 </html>
