--- a/mypage/communication.html
+++ b/mypage/communication.html
@@ -115,6 +115,7 @@
               </table>
             </div>
             <span class="btn btn-primary" style='border-radius: 15px; font-size: 1.6rem; float: right' onclick='MicroModal.show("write");'><i class='fas fa-pen'></i> 글쓰기</span>
+            <!--<div style='width: 100%; text-align: center;'><a class="btn btn-info" style='border-radius: 15px; font-size: 1.6rem; width: 80%' href='chat'><i class='fas fa-comments'></i> 지휘관과 1 : 1 채팅</a></div>-->
           </div>
 				</div>
 			</div>
