--- a/mypage/diet.html
+++ b/mypage/diet.html
@@ -137,14 +137,38 @@
             <div class="col-md-4 animate-box" style='margin-top: 7rem'>
               <article>
                 <h2>칼로리 관리</h2>
-                <table>
+                <table width='100%'>
                   <colgroup>
-                    <col width='30%'>
-                    <col width='70%'>
+                    <col width='60%'>
+                    <col width='40%'>
                   </colgroup>
                   <tr>
-                    <td>
-                </table>
+                    <td>식사 칼로리</td>
+                    <td><span id='sum_cal'>0</span> kcal</td>
+                  </tr>
+                  <tr>
+                    <td>추가 섭취 칼로리</td>
+                    <td><span id='add_cal'>0</span> kcal</td>
+                  </tr>
+                  <tr>
+                    <td>연령별 평균 기초대사량</td>
+                    <td><span id='init_cal'>0</span> kcal</td>
+                  </tr>
+                  <tr>
+                    <td>평균 활동 칼로리</td>
+                    <td><span id='act_cal'>0</span> kcal</td>
+                  </tr>
+                  <tr>
+                    <td>운동 소모 칼로리</td>
+                    <td><span id='exe_cal'>0</span> kcal</td>
+                  </tr>
+                  <tr><td>&nbsp;</td></tr>
+                  <tr>
+                    <td>칼로리 합계</td>
+                    <td><span id='tot_cal'>0</span> kcal</td>
+                  </tr>
+                </table><br>
+                <span style='font-size: 1.2rem'><i class='fas fa-check'></i> 추가 섭취 칼로리는 체력 관리 메뉴의 일일 운동량 입력란에서 수정할 수 있습니다.<br><i class='fas fa-check'></i> 운동 소모 칼로리는 MET 계산법에 의해 계산한 근사치입니다.</span>
               </article>
             </div>
           </div>
